force-app/main/default/objects/Center__c/fields/Lookup_Field_to_Parent_Obj__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Field_to_Parent_Obj__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lookup Field to Parent Obj</label>
    <referenceTo>Parent__c</referenceTo>
    <relationshipLabel>Centers</relationshipLabel>
    <relationshipName>Centers</relationshipName>
    <type>Lookup</type>
</CustomField>