force-app/main/default/objects/Center__c/fields/Lookup_Field_to_Self__c.field-meta.xml
<CustomField>
    <fullName>Lookup_Field_to_Self__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lookup Field to Self</label>
    <referenceTo>Center__c</referenceTo>
    <relationshipLabel>Centers</relationshipLabel>
    <relationshipName>Centers</relationshipName>
    <type>Lookup</type>
</CustomField>