force-app/main/default/objects/Center__c/fields/My_text_field__c.field-meta.xml
<CustomField>
    <fullName>My_text_field__c</fullName>
    <label>My text field</label>
    <length>200</length>
    <type>Text</type>
</CustomField>